--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,9 @@ jobs:
     steps: #pro - ein Step im Job
     - uses: actions/checkout@v3
     - name: Set up Python #Name für den Schritt
-      uses: actions/setup-python@v2 #was der Schritt macht #installiert auf dem macos server python
+      uses: actions/setup-python@v3 #was der Schritt macht #installiert auf dem macos server python
       with: #womit der Schritt gemacht wird
-        python-version: 3.10
+        python-version: "3.10"
     - name: Install dependencies
       run: pip install pytest #runt/macht das
     - name: Run unit tests
